2002-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Always output
 	composite images as inlined Base64.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): If magick attribute
 	string is specified, then composite image is supplied to
 	ImageMagick as inlined Base64 rather than by MPRI reference.

	* lib/Blob.cpp (base64): Added methods to update Blob with data
 	from Base64-encoded string, or to return a Base64-encoded string
 	from Blob.  Still needs documentation.

2002-04-09  Dom Lachowicz    <cinamod@hotmail.com>

	* lib/Image.cpp (Image::ping): Added PingBlob function
	
2002-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableDashArray::operator=): Added missing
 	assignment operator (fixes a bug).
	(DrawableDashArray::DrawableDashArray): Added missing copy
 	constructor (fixes a bug).

	* lib/Image.cpp (oilPaint): Changed argument type from unsigned
 	int to double.
	(chromaBluePrimary): Changed argument type from float to double.
	(chromaGreenPrimary): Changed argument type from float to double.
	(chromaRedPrimary): Changed argument type from float to double.
	(chromaWhitePoint): Changed argument type from float to double.
	(getConstPixels): Changed argument type of x_ & _y from 'int' to
 	'unsigned int'.
	(getPixels): Changed argument type of x_ & _y from 'int' to
 	'unsigned int'.

2002-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (debug): Added method to set ImageMagick debug
 	flag so that it prints debugging information while it runs.

2002-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp: Fixed a bunch of bugs related to
 	DrawableCompositeImage, DrawableFont, and inconsistencies
 	discovered by Gimpel lint.

2002-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Properly delimit individual drawing