@@ -337,7 +337,7 @@ decoration_</font></td>
 <center><a NAME="DrawableDashArray"></a><font size=-1>DrawableDashArray</font></center>
 </td>
 
-<td><font size=-1>const unsigned int* dasharray_</font></td>
+<td><font size=-1>const double* dasharray_</font></td>
 
 <td><font size=-1>Specify the pattern of dashes and gaps used to stroke
 paths. The strokeDashArray represents a zero-terminated array of numbers
@@ -353,7 +353,7 @@ of the pattern array.</font></td>
 <center><a NAME="DrawableDashOffset"></a><font size=-1>DrawableDashOffset</font></center>
 </td>
 
-<td><font size=-1>unsigned int offset_</font></td>
+<td><font size=-1>double offset_</font></td>
 
 <td><font size=-1>Specify the distance into the dash pattern to start the
 dash. See documentation on SVG's <a href="http://www.w3.org/TR/SVG/painting.html#StrokeDashoffsetProperty">stroke-dashoffset</a>
